draft: SeqItemView
