# client/openapi.json
@@ -4707,7 +4707,6 @@
 					}
 				},
 				"required": [
-					"link_template",
 					"meta",
 					"id",
 					"label",
@@ -4852,6 +4851,75 @@
 					},
 					"sampling": {
 						"$ref": "#/components/schemas/SamplingInner"
+					},
+					"sequence": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"category",
+					"event",
+					"meta",
+					"id",
+					"sampling",
+					"identification",
+					"comments",
+					"code",
+					"label",
+					"sequence",
+					"gene",
+					"legacy"
+				],
+				"type": "object"
+			},
+			"SequenceWithDetails": {
+				"additionalProperties": false,
+				"properties": {
+					"$schema": {
+						"description": "A URL to the JSON Schema for this object.",
+						"examples": [
+							"/api/v1/schemas/SequenceWithDetails.json"
+						],
+						"format": "uri",
+						"readOnly": true,
+						"type": "string"
+					},
+					"category": {
+						"$ref": "#/components/schemas/OccurrenceCategory"
+					},
+					"code": {
+						"type": "string"
+					},
+					"comments": {
+						"type": "string"
+					},
+					"event": {
+						"$ref": "#/components/schemas/EventInner"
+					},
+					"external": {
+						"$ref": "#/components/schemas/OptionalExtSeqSpecifics"
+					},
+					"gene": {
+						"$ref": "#/components/schemas/Gene"
+					},
+					"id": {
+						"format": "uuid",
+						"type": "string"
+					},
+					"identification": {
+						"$ref": "#/components/schemas/Identification"
+					},
+					"label": {
+						"type": "string"
+					},
+					"legacy": {
+						"$ref": "#/components/schemas/OptionalLegacySeqID"
+					},
+					"meta": {
+						"$ref": "#/components/schemas/Meta"
+					},
+					"sampling": {
+						"$ref": "#/components/schemas/Sampling"
 					},
 					"sequence": {
 						"type": "string"
@@ -11570,6 +11638,77 @@
 					}
 				},
 				"summary": "Delete sequence",
+				"tags": [
+					"Sequences"
+				]
+			},
+			"get": {
+				"operationId": "GetSequence",
+				"parameters": [
+					{
+						"description": "Authorization header formatted as \"Bearer auth_token\". Takes precedence over session cookie if set.",
+						"example": "Bearer \u003cJWT string\u003e",
+						"in": "header",
+						"name": "Authorization",
+						"schema": {
+							"description": "Authorization header formatted as \"Bearer auth_token\". Takes precedence over session cookie if set.",
+							"examples": [
+								"Bearer \u003cJWT string\u003e"
+							],
+							"type": "string"
+						}
+					},
+					{
+						"description": "Session cookie containing JWT",
+						"in": "cookie",
+						"name": "auth_token",
+						"schema": {
+							"description": "Session cookie containing JWT",
+							"type": "string"
+						}
+					},
+					{
+						"in": "path",
+						"name": "code",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				],
+				"responses": {
+					"200": {
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/SequenceWithDetails"
+								}
+							}
+						},
+						"description": "OK"
+					},
+					"422": {
+						"content": {
+							"application/problem+json": {
+								"schema": {
+									"$ref": "#/components/schemas/ErrorModel"
+								}
+							}
+						},
+						"description": "Unprocessable Entity"
+					},
+					"500": {
+						"content": {
+							"application/problem+json": {
+								"schema": {
+									"$ref": "#/components/schemas/ErrorModel"
+								}
+							}
+						},
+						"description": "Internal Server Error"
+					}
+				},
+				"summary": "Get sequence",
 				"tags": [
 					"Sequences"
 				]
